pamc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/underscore_label/implicit_underscore_label.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(~_: Nat): Nat {
    Nat.O
};
